refactor(auth): migrate to typed Owners in authorization system